wk_taa_taaqa/src/objects/TSM_Custom_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>TSM custom settings for configuration</description>
    <fields>
        <fullName>Apttus_Base_URL__c</fullName>
        <label>Apttus_Base_URL</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionName__c</fullName>
        <label>ConnectionName</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_SFS_NoQuote__c</fullName>
        <label>Opportunity_SFS_NoQuote</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFS_Base_URL__c</fullName>
        <label>SFS_Base_URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleMinuteFrequency__c</fullName>
        <label>ScheduleMinuteFrequency</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScheduleSecondFrequency__c</fullName>
        <description>Batch scheduling frequency in seconds</description>
        <label>ScheduleSecondFrequency</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>TSM_Custom_Settings</label>
</CustomObject>